# Insurgency-Standoff

./: CMakeLists.txt  Soldier.cpp  Weapon.cpp  main.cpp
include/: Soldier.hpp  Weapon.hpp
